[gd_scene load_steps=5 format=3 uid="uid://dc5e3vbh87b25"]

[ext_resource type="PackedScene" uid="uid://blqt3vbmisn4t" path="res://scenes/player.tscn" id="1_8ypyp"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_kp71n"]
[ext_resource type="PackedScene" uid="uid://3d6k0rvn8mao" path="res://scenes/enemy_spawner.tscn" id="2_f6f0r"]

[sub_resource type="CanvasTexture" id="CanvasTexture_1yah7"]
specular_color = Color(0.308741, 0.359883, 0.717513, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_kp71n")

[node name="Player" parent="." instance=ExtResource("1_8ypyp")]
unique_name_in_owner = true
position = Vector2(578, 326)

[node name="EnemySpawner" parent="." instance=ExtResource("2_f6f0r")]

[node name="ClickSpriteGroup" type="Node2D" parent="."]

[node name="ClickTimer" type="Timer" parent="ClickSpriteGroup"]
wait_time = 0.5

[node name="ClickSprite" type="Sprite2D" parent="ClickSpriteGroup"]
position = Vector2(7.75, 7.75)
scale = Vector2(16.5, 16.5)
texture = SubResource("CanvasTexture_1yah7")

[connection signal="timeout" from="ClickSpriteGroup/ClickTimer" to="." method="_on_click_timeout"]
